exports[`<RuleLabel /> snapshot tests matches snapshot of when it is active 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FF0000",
      "borderColor": "transparent",
      "borderRadius": "5px",
      "borderStyle": "solid",
      "borderWidth": "1px",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "10pt",
      "lineHeight": 1,
      "marginTop": "5px",
      "maxWidth": "200px",
      "padding": "5px",
      "width": "100%",
    }
  }>
  Example Rule
  <span
    style={
      Object {
        "color": "#666666",
        "display": "block",
        "float": "right",
      }
    }>
    (1)
  </span>
</div>
`;

exports[`<RuleLabel /> snapshot tests matches snapshot of when it is not active 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderColor": "#e6e6e6",
      "borderRadius": "5px",
      "borderStyle": "solid",
      "borderWidth": "1px",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "10pt",
      "lineHeight": 1,
      "marginTop": "5px",
      "maxWidth": "200px",
      "padding": "5px",
      "width": "100%",
    }
  }>
  Example Rule
  <span
    style={
      Object {
        "color": "#666666",
        "display": "block",
        "float": "right",
      }
    }>
    (1)
  </span>
</div>
`;
